--- a/Ship_Debbuger/Ship_Debbuger/Ship_Debbuger.csproj
+++ b/Ship_Debbuger/Ship_Debbuger/Ship_Debbuger.csproj
@@ -18,6 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="ManualControl.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>     
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="CompasCalibrate.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
